--- a/nutrition/chapter14.tex
+++ b/nutrition/chapter14.tex
@@ -1,5 +1,5 @@
 
-\chapter{Калярыйная і нутрыентная шчыльнасьць ежы}
+\chapter[Калярыйная і нутрыентная шчыльнасьць ежы][Шчыльнасьць ежы]{Калярыйная і нутрыентная шчыльнасьць ежы}
 
 Правіла шчыльнасьці заключаецца ў~тым, каб выбіраць сабе ежу зь нізкай удзельнай калярыйнай шчыльнасьцю і з~высокай шчыльнасьцю нутрыентаў (клятчатка\index{клятчатка}, вітаміны, антыаксыданты\index{антыаксыданты}, макра- і мікраэлемэнты). Калярыйная шчыльнасьць (энэргетычная шчыльнасьць)~--- гэта колькасьць калёрыяў на грам прадукту, чым вышэйшая шчыльнасьць, тым меншы аб'ём прадукту і вышэйшая колькасьць калёрыяў у~ім. Так, напрыклад, гародніна ўтрымоўвае 30\,ккал на 100 грамаў прадукту, а~вось чакалядка~--- да 550\,ккал на 100 грамаў прадукту.
 
@@ -31,7 +31,7 @@
 \paragraph{Удзельная шчыльнасьць вугляводаў і кішачнік.}
 Рэч у~тым, што навуковыя дасьледаваньні паказалі: менавіта ўдзельная шчыльнасьць вугляводаў, а~не глікемічны індэкс, уплывае на іх дзеяньне. Чым вышэйшая шчыльнасьць, тым мацнейшы яе ўплыў на мікрафлёру і тым мацнейшая запаленчая рэакцыя, незалежна ад агульнай колькасьці вугляводаў. Пасьля прыёму канцэнтраваных вугляводаў узьнікае «мэтабалічная эндатаксэмія» (павелічэньне ўзроўню таксынаў), якая трымаецца да 5 гадзінаў пасьля яды. Гэта выклікае хранічнае запаленьне, што прыводзіць да лептынарэзыстэнтнасьці\index{лептынарэзыстэнтнасьць} і парушэньня працы вагусу\index{вагус (блукальны нэрв)}, зьніжае насычэньне, гнетучы актыўнасьць такіх мэдыятараў насычэньня, як халецыстакінін\index{халецыстакінін}, пэптыд YY. Даведзена, што харчаваньне ``старажытнымі'' вугляводамі прыводзіць да зьмены мікрафлёры, зьніжэньня пранікальнасьці кішачніка і памяншэньня выяўнасьці запаленчых зьяваў. Аналягічная колькасьць ``сучасных'' вугляводаў не аказвае падобнага эфэкту. Чым больш «сучасных» вугляводаў, тым больш неспрыяльнай мікрафлёры як у~ротавай поласьці, так і ў~тонкім кішачніку, і тым мацнейшы запаленчы статут арганізму.
 
-Чым вышэйшая ўдзельная калярыйная шчыльнасьць, тым ніжэйшая разнастайнасьць мікрафлёры. Так, узровень Bacteroidetes вышэйшы на дыеце ў~2\,Ккал/грамаў, а~ўзровень Firmicutes вышэйшы на дыеце ў~4\,Ккал/грамаў. Узровень Parabacteroides вышэйшы на дыеце ў~2\,Ккал/грамаў, а~ўзровень Barnesiella вышэйшы на дыеце ў~4\,Ккал/грамаў.
+Чым вышэйшая ўдзельная калярыйная шчыльнасьць, тым ніжэйшая разнастайнасьць мікрафлёры. Так, узровень Bac\-te\-roidetes вышэйшы на дыеце ў~2\,Ккал/грамаў, а~ўзровень Firmicutes вышэйшы на дыеце ў~4\,Ккал/грамаў. Узровень Parabacteroides вышэйшы на дыеце ў~2\,Ккал/грамаў, а~ўзровень Barnesiella вышэйшы на дыеце ў~4\,Ккал/грамаў.
 
 \subsection{Асноўныя прынцыпы}
 
