--- a/nutrition/chapter20.tex
+++ b/nutrition/chapter20.tex
@@ -43,7 +43,7 @@
 У нашым арганізьме ЭПК і ДГК граюць важную ролю, уваходзячы ў~склад галаўнога мозгу і сятчаткі вачэй. Яны паляпшаюць кагнітыўныя функцыі, зьмяншаюць рызыку дэпрэсіі, зьмяншаюць рызыку запаленьня, карысныя для прафілактыкі сардэчна-сасудзістых захворваньняў і карэкцыі ліпіднага профілю, асабліва важныя для дзяцей і цяжарных. Маюць яны і агульныя ўласьцівасьці, і сваю спэцыфіку, бо ЭПК валодае большай супрацьзапаленчай актыўнасьцю, а~ДГК патрэбнейшы для падтрыманьня ўстойлівых мэмбранаў нэрвовых клетак.
 
 \paragraph{Транстлушчы\index{транстлушчы}.}
-Транстлушчы\index{транстлушчы} павышаюць рызыку сардэчна-сасудзістых захворваньняў, могуць павялічваць рызыку дыябэту, раку, дэпрэсій і хваробы Альцгаймэра\index{хвароба!Альцгаймэра} пры высокім узроўні спажываньня.
+Транстлушчы\index{транстлушчы} павышаюць рызыку сар\-дэч\-на-сасудзістых захворваньняў, могуць павялічваць рызыку дыябэту, раку, дэпрэсій і хваробы Альцгаймэра\index{хвароба!Альцгаймэра} пры высокім узроўні спажываньня.
 
 \subsection{Асноўныя прынцыпы}
 
