--- a/nutrition/chapter23.tex
+++ b/nutrition/chapter23.tex
@@ -26,7 +26,7 @@
 У тых краінах, дзе ядуць больш расьліннай ежы, меней сардэчна-сасудзістых захворваньняў. Так гіпэртанія (падвышаны ціск) сустракаецца толькі ў~1\,\% насельніцтва, а~вось у~заходніх краінах~--- у~30\,\% насельніцтва. Навукоўцы высьветлілі, што людзі з~дэфіцытам калію і лішкам натрыю маюць удвая большую рызыку сьмерці ад хваробаў сэрца і на 50\,\% павышаную рызыку памерці ад іншых захворваньняў.
 
 \paragraph{Рак страўніка.}
-Залішняе спажываньне солі зьвязанае з~падвышанай рызыкай раку страўніка (у спалучэньні з~Helicobacter pylori) і з~ракам тоўстага кішачніка.
+Залішняе спажываньне солі зьвязанае з падвышанай рызыкай раку страўніка (у спалучэньні з~He\-li\-co\-bac\-ter pylori) і з~ракам тоўстага кішачніка.
 
 \paragraph{Азызласьць.}
 Вельмі частай праблемай зьяўляецца пастознасьць, друзласьць, азызласьць, млявасьць падскурнай клятчаткі ў~цэлым або ў~пэўных частках цела. Адкуль бярэцца друзласьць у~здаровага чалавека бязь першаснай паталёгіі лімфатычнай сыстэмы? Вінаваты залішні натрый, які назапашваецца ў~падскурна-тлушчавай клятчатцы, дзе стымулюе павялічаны рост (гіпэрплазію\index{гіпэрплазія}) лімфатычных сасудаў з~затрымкай вадкасьці. Сетка лімфатычных сасудаў расьце, а~іх тонус падае, і гэта ўсё прыводзіць да затрымкі вадкасьці. Памятайце, што ўвесь лішак натрыю і зьвязанай вады захоўваецца менавіта ў~падскурна-тлушчавай клятчатцы!
