--- a/nutrition/chapter6.tex
+++ b/nutrition/chapter6.tex
@@ -69,7 +69,7 @@
 Рэальнага перарасьцяжэньня страўніка няма. Мэханізм такі ж, як пры адмове ад солі,~--- спачатку ўсё становіцца прэсным, але праз пару тыдняў адчувальнасьць смакавых рэцэптараў аднаўляецца, і вы зноў паўнавартасна адчуваеце ўсе смакі. Ня трэба баяцца «расьцягнуць» страўнік, вы ж не баіцеся расьцягнуць свой мачавы пухір? Страўнік~--- гэта цягліцавы орган, ён можа павялічваць свой аб'ём у~4--5 разоў і вяртацца ў~норму, гэтая ўласьцівасьць нам і патрэбная, каб мы маглі зьесьці шмат за адзін прыём ежы.
 
 \paragraph{Варыятыўнасьць.}
-Зусім неабавязкова прытрымлівацца строга фіксаванай колькасьці прыёмаў ежы. Калі ў~вас быў інтэнсіўны дзень трэніровак, можна зьесьці больш. А~калі гэта дзень зь нізкай фізычнай актыўнасьцю, то можна прапусьціць прыём ежы.
+Зусім неабавязкова прытрымлівацца стро\-га фіксаванай колькасьці прыёмаў ежы. Калі ў~вас быў інтэнсіўны дзень трэніровак, можна зьесьці больш. А~калі гэта дзень зь нізкай фізычнай актыўнасьцю, то можна прапусьціць прыём ежы.
 
 \tipbox{Дрымотнасьць пасьля ежы зьвязаная або з~паабедзенным зьніжэньнем картызолу, або зь вялікай колькасьцю вугляводаў. У~першым выпадку можна абедаць пазьней, а~ў другім~--- дадаць больш бялку ў~іншы прыём ежы.}
 
