--- a/willpower/chapter4.tex
+++ b/willpower/chapter4.tex
@@ -224,7 +224,7 @@
 
 \paragraph{36/12, або фастынг\index{фастынг} празь дзень.} Гэта сыстэма, калі вы рэгулярна посьціце 36 гадзінаў, а~ясьце ў~прамежак 12 гадзінаў без абмежаваньняў, пры гэтым колькасьць зьяданых калёрыяў моцна скарачаецца. Гэтая сыстэма мае шмат розных назваў: Alternate-day fasting, Every-Other-Day Diet (EODD), UpDayDownDay. Гэта строгая і складаная сыстэма, але для пэўнага тыпу людзей, якія добра кіруюць пачуцьцём голаду, яна можа падысьці.
 
-\paragraph{5:2.} Мяркуе абмежаваньне калярыйнасьці да 500\,ккал у~дзень два дні на тыдзень, пры гэтым вы ясьце ў~астатнія дні як звычайна.
+\paragraph{5:2.} Мяркуе абмежаваньне калярыйнасьці да 500\,ккал у дзень два дні на тыдзень, пры гэтым вы ясьце ў~астатнія дні як звычайна.
 
 \paragraph{Дыета, якая імітуе галаданьне (FMD Fasting Mimicking Diet),~---} гэта 5 дзён адмысловай дыеты запар адзін раз на месяц, звычайна пад назіраньнем спэцыялістаў. У першы дзень вы падразаеце свой рацыён напалову, потым ясьце траціну свайго звыклага рацыёну, прыбраўшы жывёльныя бялкі. Рацыён складаецца з~расьлінных бялкоў на 10\,\%, 56\,\% калёрыяў~--- тлушчы, 34\,\%~--- нізкаглікемічныя вугляводы (агародніна, зеляніна і да т.~п.). \textbf{Аўтары гэтай дыеты рэкамэндуюць здаровым людзям праходзіць адзін такі цыкл раз на тры месяцы.}
 
