Remove pictures from willpower

--- a/willpower.tex
+++ b/willpower.tex
@@ -12,7 +12,7 @@
 \title{Воля да жыцьця}
 \date{2020 Пераклад 2022}
 
-\includeonly{willpower/intro,willpower/chapter1}
+% \includeonly{willpower/intro,willpower/chapter1}
 
 \begin{document}
 
