--- a/willpower/chapter1.tex
+++ b/willpower/chapter1.tex
@@ -13,13 +13,13 @@
 \textbf{Здароўе ўзьнікае спантанна, пры дасягненьні і асэнсаваньні свайго месца ў~жыцьці, пастаноўцы высокіх мэтаў, зьяўленьні цікавасьці да сябе і навакольных, дзякуючы жаданьню дамагацца большага без залішняй напругі й высілкаў. Не змагайцеся з~вашым целам і розумам, яны й так хочуць быць здаровымі.}
 
 Калі нашыя мэты патрабуюць ад нас здароўя, калі мы пашыраем свае рэсурсы і ўплыў, нашыя цела і мозг атрымліваюць магутны імпульс да прапампоўкі, да таго, каб стаць больш моцнымі, актыўнымі, кемлівымі, цягавітымі. Таму слушнае пытаньне, якое мне хацелася б пачуць ад вас: «Навошта мне быць здаровым?» 
-\begin{figure}[htb!]
-  \centering
-  \includegraphics[width=0.4\textwidth]{willpower/pic1.png}
+% \begin{figure}[htb!]
+%   \centering
+%   \includegraphics[width=0.4\textwidth]{willpower/pic1.png}
 
-  На кожным сваім навучальным курсе я пытаю: «Навошта людзі прыйшлі вучыцца здароўю?» Часьцей за ўсё я чую наступныя адказы:
+%   На кожным сваім навучальным курсе я пытаю: «Навошта людзі прыйшлі вучыцца здароўю?» Часьцей за ўсё я чую наступныя адказы:
   %((карцінка: Энэргія Розум Шчасьце Прыгажосьць Даўгалецьце Пазьбегнуць пакутаў))
-\end{figure}
+% \end{figure}
 
 \subsubsection{Пазьбегнуць дыскамфорту, пакутаў і болю.}
 
@@ -114,11 +114,11 @@
 
 5. Затым мы зьмяняем сваё асяродзьдзе і прыбіраем прастору вакол піраміды: \textbf{«праводзім рэвізію» нашага асяродзьдзя}, пераязджаем у~больш прыгожае і здаровае месца. Думаем пра экалёгію і паветра, імкнёмся да справядлівага і здаровага грамадства ня толькі для сябе, але й для іншых. Так выглядае піраміда здароўя, пачынаючы ад выбару прадуктаў кожны дзень і заканчваючы палітычнымі патрабаваньнямі. Мы жывыя, пакуль мяняемся, і мы можам станавіцца яшчэ больш здаровымі.
 
-\begin{figure}[htb!]
-  \centering
-  \includegraphics[width=0.8\textwidth]{willpower/pic2.png}
+% \begin{figure}[htb!]
+%   \centering
+%   \includegraphics[width=0.8\textwidth]{willpower/pic2.png}
   %((карцінка: Што для вас здароўе? Навошта вам здароўе? / Асяродзьдзе: -карыснае -узбагачанае -шкоднае -сацыяльнае / Воля да жыцьця / Сэнс / Статус, стасункі, самаспазнаньне / Стрэс, усьвядомленсьць / Харчаваньне, рух, сон, рэжым і біярытмы / Глеба / Паветра / Сонца / Таксыны))
-\end{figure}
+% \end{figure}
 
 Мы падвышаем сваю волю да жыцьця і волю да ўлады, пераўтвараючы асяродзьдзе вакол сябе, робячы яго больш здаровым. Мы робім сьвет здаравейшым, а~здаровы сьвет яшчэ больш умацоўвае наша здароўе. Пачніце выбудоўваць сваё здароўе ад сёньня. Агледзьцеся: што вы можаце зрабіць для здароўя? Падумайце, якія вашыя дзеяньні можна зрабіць яшчэ больш здаровымі?
 
@@ -279,11 +279,11 @@
 
 Натуральнасьць здароўя~--- гэта датрыманьне сваёй прыроды і прыроды рэчаў. Невыпадкова на франтоне старажытнагрэцкага храма Апалёна ў~Дэльфах быў надпіс: «Спазнай самога сябе». Натуральнасьць уключала гармонію і суразьмернасьць цела і духу, раўнавагу дзейных у~арганізьме сілаў, а~яшчэ~--- гарманічныя стасункі з~асяродзьдзем. Важным лічылася прытрымлівацца сваёй прыроды і быць у~ладзе з~усім, што цябе атачае.
 
-\begin{figure}[htb!]
-  \centering
-  \includegraphics[width=0.6\textwidth]{willpower/pic3.png}
+% \begin{figure}[htb!]
+%   \centering
+%   \includegraphics[width=0.6\textwidth]{willpower/pic3.png}
   %((карцінка: Цела~--- храм здароўя /~--- Спазнай сябе /~--- Трымайся прыроды /~--- Балянс і гармонія /~--- Лад жыцьця /~--- Асабістая адказнасьць))  
-\end{figure}
+% \end{figure}
 
 \subsubsection{Разумнасьць здароўя.} 
 
@@ -484,21 +484,21 @@
 
 Формула здароўя вызначаецца наступнымі фактарамі: 50\,\%~--- гэта лад жыцьця, зь іх 25\,\%~--- гэта харчаваньне і здароўе кішачніка, па 20\,\% у~генэтыкі і асяродзьдзя, 10\,\%~--- сыстэма аховы здароўя. У сваю чаргу, лад жыцьця чалавека складаецца з~асобных кампанэнтаў, рэсурсаў здароўя. Далей у~кнізе мы будзем іх падрабязна абмяркоўваць і вывучаць, як можна прапампаваць кожны з~рэсурсаў. Мая мара~--- каб кожны чалавек мог навучыцца ўсьвядомленаму кіраваньню сваім здароўем.
 
-\begin{figure}[htb!]
-  \centering
-  \includegraphics[width=0.5\textwidth]{willpower/pic4.png}
+% \begin{figure}[htb!]
+%   \centering
+%   \includegraphics[width=0.5\textwidth]{willpower/pic4.png}
   %((карцінка: 10\% мэдыцына 20\% генэтыка 20\% экалёгія 50\% лад жыцьця))  
-\end{figure}
+% \end{figure}
 
 \paragraph{Рэсурсы здароўя мусяць адпавядаць асноўным крытэрам:} быць унівэрсальнымі для ўсіх людзей, мець надзейнае навуковае абгрунтаваньне свайго ўплыву на здароўе, быць даступнымі для самастойнай адзнакі і карэкцыі.
 
 Усе рэсурсы шчыльна зьвязаныя паміж сабой, бо памяншэньне аднаго цягне за сабой памяншэньне шэрагу іншых. Слушная і зваротная залежнасьць: пры ўмацаваньні аднаго рэсурсу ўзмацняюцца і астатнія. Напрыклад, сон залежыць і ад фізычнай актыўнасьці, і ад рэжыму харчаваньня, і ад фактараў асяродзьдзя, і ад псыхалягічных фактараў.
 
-\begin{figure}[htb!]
-  \centering
-  \includegraphics[width=1\textwidth]{willpower/pic5.png}
+% \begin{figure}[htb!]
+%   \centering
+%   \includegraphics[width=1\textwidth]{willpower/pic5.png}
   % ((карцінка: Псыхалягічны рэсурс: стрэс, усьвядомленасьць Здароўе Сацыяльны рэсурс: статус, атачэньне Фізычны рэсурс: харчаваньне, рух, сон Асяродзьдзе: шкоднае, карыснае, лічбавае))
-\end{figure}
+% \end{figure}
 
 \paragraph{Базавымі зьяўляюцца фізычныя рэсурсы здароўя: рух, харчаваньне, сон і рэжым.} Рух уключае фізычную актыўнасьць любога віду (усе сытуацыі, калі вы не ляжыце, не сядзіце і не ясьце) і ўсіх разнавіднасьцяў (аэробныя, анаэробныя, зьмешаныя). А таксама цялеснасьць, гнуткасьць, цялесную адчувальнасьць, паставу і прафіляктыку траўмаў.
 
